// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BallZigZag> <BallZigZag> Mount: enzyme.mount 1`] = `
.css-73tqck,
[data-css-73tqck] {
  position: relative;
  transform: translate(-15px, -15px);
  -webkit-transform: translate(-15px, -15px);
}

.css-73tqck > div,
[data-css-73tqck] > div {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #ffffff;
  animation-fill-mode: both;
  left: -7px;
  margin-left: 15px;
  position: absolute;
  top: 4px;
  -webkit-animation-fill-mode: both;
}

.css-73tqck > div:first-child,
[data-css-73tqck] > div:first-child {
  animation: animation_qi7fs0 0.7s 0s infinite linear;
  -webkit-animation: animation_qi7fs0 0.7s 0s infinite linear;
}

.css-73tqck > div:last-child,
[data-css-73tqck] > div:last-child {
  animation: animation_1dvwwiv 0.7s 0s infinite linear;
  -webkit-animation: animation_1dvwwiv 0.7s 0s infinite linear;
}

<BallZigZag
  loading={true}
>
  <div
    data-css-73tqck=""
  >
    <div />
    <div />
  </div>
</BallZigZag>
`;

exports[`<BallZigZag> <BallZigZag> Render: enzyme.render 1`] = `
.css-73tqck,
[data-css-73tqck] {
  position: relative;
  transform: translate(-15px, -15px);
  -webkit-transform: translate(-15px, -15px);
}

.css-73tqck > div,
[data-css-73tqck] > div {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #ffffff;
  animation-fill-mode: both;
  left: -7px;
  margin-left: 15px;
  position: absolute;
  top: 4px;
  -webkit-animation-fill-mode: both;
}

.css-73tqck > div:first-child,
[data-css-73tqck] > div:first-child {
  animation: animation_qi7fs0 0.7s 0s infinite linear;
  -webkit-animation: animation_qi7fs0 0.7s 0s infinite linear;
}

.css-73tqck > div:last-child,
[data-css-73tqck] > div:last-child {
  animation: animation_1dvwwiv 0.7s 0s infinite linear;
  -webkit-animation: animation_1dvwwiv 0.7s 0s infinite linear;
}

<div
  data-css-73tqck=""
>
  <div />
  <div />
</div>
`;

exports[`<BallZigZag> <BallZigZag> Shallow: enzyme.shallow 1`] = `
.css-73tqck,
[data-css-73tqck] {
  position: relative;
  transform: translate(-15px, -15px);
  -webkit-transform: translate(-15px, -15px);
}

.css-73tqck > div,
[data-css-73tqck] > div {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #ffffff;
  animation-fill-mode: both;
  left: -7px;
  margin-left: 15px;
  position: absolute;
  top: 4px;
  -webkit-animation-fill-mode: both;
}

.css-73tqck > div:first-child,
[data-css-73tqck] > div:first-child {
  animation: animation_qi7fs0 0.7s 0s infinite linear;
  -webkit-animation: animation_qi7fs0 0.7s 0s infinite linear;
}

.css-73tqck > div:last-child,
[data-css-73tqck] > div:last-child {
  animation: animation_1dvwwiv 0.7s 0s infinite linear;
  -webkit-animation: animation_1dvwwiv 0.7s 0s infinite linear;
}

<div
  data-css-73tqck=""
>
  <div />
  <div />
</div>
`;
